# rust-electron-playground

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
api/: Cargo.toml
api/src/: api.rs  registration.rs
matrix-api/: Cargo.toml
matrix-api/src/: api.rs  auth.rs  client.rs  lib.rs  login.rs  main.rs  registration.rs
matrix-api/src/rooms/: create.rs  mod.rs  public.rs
matrix-cli/: Cargo.toml
matrix-cli/src/: create_room.rs  io.rs  list_public_rooms.rs  login.rs  main.rs  register.rs
native/: Cargo.toml
native/src/: lib.rs  main.rs
src/: index.html  index.js
