[package]
name = "matrix-api"
version = "0.1.0"
authors = ["Robin Neal <robinneal429@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0.99"
serde_json = "1.0.40"