[package]
name = "test_app"
version = "0.1.0"
authors = ["Lizzie Davison <lizzie@hubblehq.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "test_app"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
num_cpus = "1.4"
serde = "1.0.101"
serde_derive = "1.0.101"
reqwest = "0.9.22"
serde_json = "1.0.41"
matrix-api = { path = '../matrix-api'}